[project]
name = "clip-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy<2.0.0",
    "spacy>=3.5.0,<3.6.0",
    "coreferee>=1.4.0",
    "nltk>=3.8.0",
    "newspaper4k>=0.9.0",
    "ddgs>=8.0.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "pyvis>=0.3.0",
    "pyarrow>=14.0.0",
    "gradio>=3.40.0,<4.0.0",
]
